SERVER-56437 Always detach Pipeline from OperationContext.